@@ -266,6 +266,7 @@ SCOREP_POSIX_ACCESS
 AC_SCOREP_BUILD_MODE
 AC_SCOREP_CUDA
 SCOREP_OPENACC
+SCOREP_KOKKOS
 SCOREP_CRAY_PMI
 SCOREP_MNTENT_CHECK
 SCOREP_LUSTREAPI_CHECK
