@@ -15,6 +15,7 @@ include ../src/services/unwinding/Makefile.confvars.inc.am
 include ../src/services/platform/Makefile.confvars.inc.am
 include ../src/adapters/compiler/Makefile.confvars.inc.am
 include ../src/adapters/cuda/Makefile.confvars.inc.am
+include ../src/adapters/kokkos/Makefile.confvars.inc.am
 include ../src/adapters/opencl/Makefile.confvars.inc.am
 include ../src/adapters/openacc/Makefile.confvars.inc.am
 include ../src/adapters/mpi/Makefile.confvars.inc.am
