@@ -215,6 +215,7 @@ AM_CONDITIONAL([SCOREP_MPI_OPENMPI], [test $? -eq 0])
 AC_SCOREP_BUILD_MODE
 AC_SCOREP_CUDA
 SCOREP_OPENACC
+SCOREP_KOKKOS
 SCOREP_CRAY_PMI
 SCOREP_MNTENT_CHECK
 SCOREP_LUSTREAPI_CHECK
