@@ -189,6 +189,7 @@ AS_IF([test -n "${scorep_opari2_bindir}"],
 AC_SCOREP_BUILD_MODE
 AC_SCOREP_CUDA
 SCOREP_OPENACC
+SCOREP_KOKKOS
 SCOREP_CRAY_PMI
 SCOREP_MNTENT_CHECK
 SCOREP_LUSTREAPI_CHECK
