@@ -1,0 +1,31 @@
+## -*- mode: makefile -*-
+
+##
+## This file is part of the Score-P software (http://www.score-p.org)
+##
+## Copyright (c) 2020,
+## Technische Universitaet Dresden, Germany
+##
+## This software may be modified and distributed under the terms of
+## a BSD-style license. See the COPYING file in the package base
+## directory for details.
+##
+
+## file       src/adapters/kokkos/Makefile.confvars.inc.am
+
+noinst_LTLIBRARIES += libscorep_kokkos_confvars.la
+
+libscorep_kokkos_confvars_la_SOURCES = \
+    $(SRC_ROOT)src/adapters/kokkos/scorep_kokkos_confvars.c
+
+libscorep_kokkos_confvars_la_CPPFLAGS = \
+    $(AM_CPPFLAGS) \
+    -I$(PUBLIC_INC_DIR) \
+    -I$(INC_ROOT)src/measurement/include \
+    $(UTILS_CPPFLAGS)
+
+libscorep_confvars_la_LIBADD += libscorep_kokkos_confvars.la
+
+EXTRA_DIST += \
+    $(SRC_ROOT)src/adapters/kokkos/scorep_kokkos_confvars.inc.c
+
