@@ -1,0 +1,19 @@
+/*
+ * This file is part of the Score-P software (http://www.score-p.org)
+ *
+ * Copyright (c) 2020,
+ * Technische Universitaet Dresden, Germany
+ *
+ * This software may be modified and distributed under the terms of
+ * a BSD-style license. See the COPYING file in the package base
+ * directory for details.
+ *
+ */
+
+/*
+ *  Configuration variables for the Kokkos adapter.
+ */
+static SCOREP_ConfigVariable scorep_kokkos_confvars[] =
+{
+    SCOREP_CONFIG_TERMINATOR
+};
