@@ -27,6 +27,8 @@ scorep_SOURCES = \
     $(SRC_ROOT)src/tools/instrumenter/scorep_instrumenter_install_data.hpp \
     $(SRC_ROOT)src/tools/instrumenter/scorep_instrumenter_io.cpp           \
     $(SRC_ROOT)src/tools/instrumenter/scorep_instrumenter_io.hpp           \
+    $(SRC_ROOT)src/tools/instrumenter/scorep_instrumenter_kokkos.cpp       \
+    $(SRC_ROOT)src/tools/instrumenter/scorep_instrumenter_kokkos.hpp       \
     $(SRC_ROOT)src/tools/instrumenter/scorep_instrumenter_mpp.cpp          \
     $(SRC_ROOT)src/tools/instrumenter/scorep_instrumenter_mpp.hpp          \
     $(SRC_ROOT)src/tools/instrumenter/scorep_instrumenter_online_access.cpp \
