@@ -4,7 +4,7 @@
  * Copyright (c) 2013, 2020,
  * Forschungszentrum Juelich GmbH, Germany
  *
- * Copyright (c) 2014-2017,
+ * Copyright (c) 2014-2017, 2020,
  * Technische Universitaet Dresden, Germany
  *
  * This software may be modified and distributed under the terms of
@@ -50,6 +50,7 @@ typedef enum
     SCOREP_INSTRUMENTER_ADAPTER_MEMORY,
     SCOREP_INSTRUMENTER_ADAPTER_LINKTIME_WRAPPING,
     SCOREP_INSTRUMENTER_ADAPTER_LIBWRAP,
+    SCOREP_INSTRUMENTER_ADAPTER_KOKKOS,
 
     /* Should stay last element in enum */
     SCOREP_INSTRUMENTER_ADAPTER_NUM
